webkit2gtk (2.12.2-2) UNRELEASED; urgency=medium

  * debian/control:
    + Now that the GTK+ transition to 3.20 is done, we can revert the
      build dependency on gtk+3 back to >= 3.10.

 -- Alberto Garcia <berto@igalia.com>  Mon, 09 May 2016 16:56:14 +0300

webkit2gtk (2.12.2-1) unstable; urgency=medium

  * New upstream release (Closes: #803104).
  * debian/control:
    + Update build dependency on gtk+3 to >= 3.20 (see #820309).
    + Update Standards-Version to 3.9.8 (no changes needed).

 -- Alberto Garcia <berto@igalia.com>  Thu, 28 Apr 2016 11:46:35 +0300

webkit2gtk (2.12.1-1) unstable; urgency=medium

  * New upstream release.
  * debian/patches/fix-ftbfs-freebsd.patch,
    debian/patches/fix-ftbfs-powerpc.patch,
    debian/patches/fix-ftbfs-hurd.patch:
    + Remove, all these are upstream now.
  * debian/patches/fix-ftbfs-alpha.patch,
    debian/patches/fix-ftbfs-m68k.patch,
    debian/patches/fix-ftbfs-sparc64.patch,
    debian/patches/hide-gtk2-plugins.patch
    + Refresh.

 -- Alberto Garcia <berto@igalia.com>  Thu, 14 Apr 2016 14:07:29 +0300

webkit2gtk (2.12.0-2) unstable; urgency=medium

  * debian/patches/fix-ftbfs-freebsd.patch:
    + Fix FTBFS in GNU/kFreeBSD.
  * debian/patches/fix-ftbfs-powerpc.patch:
    + Fix FTBFS in PowerPC.
  * debian/patches/fix-ftbfs-hurd.patch:
    + Fix FTBFS in the Hurd.

 -- Alberto Garcia <berto@igalia.com>  Sun, 03 Apr 2016 15:54:37 +0300

webkit2gtk (2.12.0-1) unstable; urgency=medium

  * New upstream release.
  * Refresh all patches.
  * debian/source/lintian-overrides:
    + Update source-is-missing overrides.
  * debian/libwebkit2gtk-4.0-37.symbols:
    + Update.
  * debian/copyright:
    + Remove files that no longer exist.

 -- Alberto Garcia <berto@igalia.com>  Tue, 22 Mar 2016 12:16:08 +0200

webkit2gtk (2.10.9-1) unstable; urgency=medium

  * New upstream release.

 -- Alberto Garcia <berto@igalia.com>  Fri, 18 Mar 2016 12:35:25 +0200

webkit2gtk (2.10.8-1) unstable; urgency=high
