@@ -59,7 +59,7 @@ else
 endif
 
 %:
-	dh $@ --parallel
+	dh $@ --parallel --with gir
 
 override_dh_auto_configure:
 	CFLAGS="$(CFLAGS) $(CPPFLAGS)" \
@@ -84,10 +84,6 @@ override_dh_strip:
 override_dh_makeshlibs:
 	dh_makeshlibs -plibwebkit2gtk-4.0-37 -Xinjected-bundle
 	dh_makeshlibs -plibjavascriptcoregtk-4.0-18
-
-override_dh_shlibdeps:
-	dh_shlibdeps
-	dh_girepository
 
 override_dh_builddeb:
 	DEB_BUILD_OPTIONS="$(filter-out parallel=%,$(DEB_BUILD_OPTIONS))" \
